--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ textarea {
 <p>השאלון הוא סודי בהחלט ומשמש את צוות הקליניקה בלבד.</p>
 <p>הוראות: אנא ענה/י על השאלון ע"י סימון ✔ במקום המתאים בלבד. במידה וענית תשובה חיובית, אנא פרט/י ככל הניתן במקום המיועד לכך.</p>
 
-<form action="#" method="post">
+<form id="HealthDecLlaration" action="https://formspree.io/f/xblllzqj" method="post">
     <label for="first-name">שם פרטי:</label>
     <input type="text" id="first-name" name="first-name" required>
 
